--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="/" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
       <div class="flex flex--aligned header__actions">
         <i class="fa fa-bell header__action"></i>
-        <a href="/lists.html" class="header__link lists-link" id="heart-nav">
+        <a href="lists.html" class="header__link lists-link" id="heart-nav">
           <i class="fa fa-heart header__action" id="header-heart"></i>
           <span class="badge lists-link__badge"></span>
         </a>
