--- a/lists.html
+++ b/lists.html
@@ -13,7 +13,7 @@
       <a href="/" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
       <div class="flex flex--aligned header__actions">
         <i class="fa fa-bell header__action"></i>
-        <a href="/lists.html" class="header__link" id="heart-nav">
+        <a href="lists.html" class="header__link" id="heart-nav">
           <i class="fa fa-heart header__action" id="header-heart"></i>
           <span class="badge lists-link__badge"></span>
         </a>
@@ -28,8 +28,8 @@
       <a href="#" class="card">
         <h4>Maui Vacation</h4>
       </a>
-      <a href="/list.html" class="card">
-        <h4 class="flex flex--aligned">My Favourites <div class="badge" style="margin-left: 8px"></div></h4>
+      <a href="list.html" class="card">
+        <h4 class="flex flex--aligned">My Favourites</h4>
       </a>
       <a href="#" class="card">
         <h4>Recently viewed</h4>
