--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
       <a href="/" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
       <div class="flex flex--aligned header__actions">
         <i class="fa fa-bell header__action"></i>
-        <a href="/lists.html" class="header__link" id="heart-nav">
+        <a href="lists.html" class="header__link" id="heart-nav">
           <i class="fa fa-heart header__action" id="header-heart"></i>
           <span class="badge lists-link__badge"></span>
         </a>
@@ -23,7 +23,7 @@
     </div>
   </header>
   <section class="hero">
-    <a href="/lists.html" class="hero__back"><i class="fa fa-chevron-left"></i> My Lists</a>
+    <a href="lists.html" class="hero__back"><i class="fa fa-chevron-left"></i> My Lists</a>
     <div class="hero__footer">
       <h1>My Favorites</h1>
     </div>
