--- a/lists.html
+++ b/lists.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header flex flex--aligned">
     <div class="container flex__full flex flex--aligned flex--spaced">
-      <a href="/" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
+      <a href="/multilists" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
       <div class="flex flex--aligned header__actions">
         <i class="fa fa-bell header__action"></i>
         <a href="lists.html" class="header__link" id="heart-nav">
