--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header flex flex--aligned">
     <div class="container flex__full flex flex--aligned flex--spaced">
-      <a href="/multilists" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
+      <a href="index.html" class="header__logo"><img src="//www.expedia.com/_dms/header/logo.svg?locale=en_US&siteid=1" alt=""></a>
       <div class="flex flex--aligned header__actions">
         <i class="fa fa-bell header__action"></i>
         <a href="lists.html" class="header__link" id="heart-nav">
@@ -29,20 +29,50 @@
     </div>
   </section>
   <div class="container" style="padding-top: 12px">
-    <div class="item">
+    <div class="item" data-item-id="las-vegas">
       <div class="item__img"></div>
       <div class="item__content">
-        <h3>Hollywood Walk of Fame</h3>
-        <input type="checkbox" checked class="heart item__heart" data-suggestion="Los Angeles trip" data-item-id="los-angeles-beaches">
+        <h3>Las Vegas</h3>
+        <input type="checkbox" checked class="heart item__heart" data-suggestion="Los Angeles trip" data-item-id="las-vegas">
       </div>
     </div>
-    <div class="item">
+    <div class="item" data-item-id="los-angeles">
       <div class="item__img"></div>
       <div class="item__content">
-        <h3>Santa Monica</h3>
-        <input type="checkbox" checked class="heart item__heart" data-suggestion="Los Angeles trip" data-item-id="los-angeles-beaches">
+        <h3>Los Angeles</h3>
+        <input type="checkbox" checked class="heart item__heart" data-suggestion="Los Angeles trip" data-item-id="los-angeles">
       </div>
     </div>
   </div>
+  <div class="modal" id="modal">
+    <div class="modal__content" id="modal-content">
+      <div class="card">
+        <h2>Choose a list</h2>
+        <form action="" class="lists" id="lists-form">
+          <label class="flex flex--aligned" for="my-favourites">
+            <input type="checkbox" class="lists__option" id="my-favourites" data-list-name="My Favourites">
+            My Favourites
+          </label>
+          <label class="flex flex--aligned" for="wishlist">
+            <input type="checkbox" class="lists__option" id="wishlist" data-list-name="Wishlist" checked>
+            Wishlist
+          </label>
+          <div id="above-here"></div>
+          <label class="flex flex--aligned" for="new-list-checkbox" id="new-list-button">
+            <input type="checkbox" class="lists__option" id="new-list-checkbox">
+            <span id="new-list-value">New list</span>
+          </label>
+          <input type="text" id="new-list-input" autocomplete="off" hidden class="lists__new">
+          <button id="lists-save-button" class="btn lists__action">Save</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div id="toast" class="toast">
+    <p class="flex flex--aligned" hidden id="single-list-message">Saved to <span id="single-list-name" style="padding-left: 4px"></span> <strong class="toast__action" id="">Change</strong></p>
+    <p class="flex flex--aligned" hidden id="multiple-list-message">Saved to multiple lists <strong class="toast__action">Change</strong></p>
+    <p class="flex flex--aligned" hidden id="removal-list-message">Removed from Wishlist <strong class="toast__action">Change</strong></p>
+  </div>
+  <script src="js/index.js"></script>
 </body>
 </html>
